# analysis-and-prediction-of-stroke-using-ml

./: .gitignore  README.md  automl_baseline.ipynb  bmi_viz.py  data_preprocessing.py  grounded_analysis.ipynb  grounded_analysis.py  leaderboard_V1_IMPUTED.csv  leaderboard_V2_DROPPED_NA.csv  leaderboard_V3_RAW_NA.csv  leaderboard_V4_NO_CLIP_IMPUTE.csv  main.py  mlflow.db  model_factory.py  pyproject.toml  smoking_stroke_analysis.py  train.py
azure/monitoring/monitoring/: evaluate_model.yaml  stroke_drift.py  stroke_drift.yaml
azure/pipelines/: register_components.py
azure/pipelines/components/: stroke_data_prep_component.yaml
azure/pipelines/pipelines/: stroke_end_to_end_pipeline.py  stroke_preprocessing_component.py
azure_monitoring/: monitoring_pipeline.py
azure_monitoring/monitoring/: evaluate_model.py
deployment/: azure_deployment_cli.py
eda/: age_glucose_analysis.py  eda.ipynb  eda_theme.py
features/: data_cleaning.py  dataset_versions.py  feature_creation.py  preprocessing.py  transformation.py  transformations.py
mlruns/2/3d74263b86f3488abf9c82153ca31132/artifacts/: best_config.json
model/: automl_baseline.py  baseline.py  flaml_baseline.py  helper.py  model_factory.py  stoke_analysis_automl_baseline.ipynb  stroke_analysis_automl.ipynb  stroke_analysis_automl_all_dataversions.ipynb  train.py
redundant_files/: bmi_missingness_analysis.py  dataviz.py  grounded_analysis.py
reports/eda/: binary_summary_colored.tex  column_type_counts_table.tex  hypothesis_table.tex  missing_values_table.tex
(+17 files in other folders)
