[project]
name = "stoke-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "missingno>=0.5.2",
    "plotnine>=0.14.5",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
