[project]
name = "stoke-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flaml>=2.5.0",
    "h2o>=3.46.0.8",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "missingno>=0.5.2",
    "mlflow>=3.9.0",
    "plotnine>=0.14.5",
    "rich>=14.2.0",
    "ruff>=0.11.2",
    "scikit-learn==1.7.2",
    "seaborn>=0.13.2",
    "setuptools==69.5.1",
    "xgboost>=3.1.1",
]
